tests/invalid/multi_output_requires_bad_format.esm
{
  "esm": "0.2.0",
  "metadata": {
    "name": "MultiOutputRequiresBadFormat",
    "description": "Invalid: Discretization.requires value does not match the required '<scheme>#<output>' pattern (missing '#' separator). Schema must reject because the additionalProperties pattern on requires is '^[^#]+#[^#]+$'."
  },
  "models": {
    "Empty": {
      "variables": { "q": { "type": "state", "units": "1", "default": 0.0 } },
      "equations": [{ "lhs": { "op": "D", "args": ["q"], "wrt": "t" }, "rhs": 0.0 }]
    }
  },
  "discretizations": {
    "ppm_reconstruction": {
      "kind": "multi_output_stencil",
      "applies_to": { "op": "reconstruct", "args": ["$q"], "dim": "$x" },
      "outputs": ["q_left_edge"],
      "stencil": {
        "q_left_edge": [{ "selector": { "kind": "cartesian", "axis": "$x", "offset": 0 }, "coeff": 1.0 }]
      }
    },
    "bad_consumer": {
      "kind": "stencil",
      "applies_to": { "op": "flux", "args": ["$q"], "dim": "$x" },
      "requires": {
        "q_left_edge": "ppm_reconstruction_q_left_edge"
      },
      "stencil": [
        { "selector": { "kind": "cartesian", "axis": "$x", "offset": 0 }, "coeff": 1.0 }
      ]
    }
  }
}
